less tiny market switcher prevent overflowing installation help button

--- a/frontend/app/css/styles.less
+++ b/frontend/app/css/styles.less
@@ -141,7 +141,7 @@ a:focus {
 }
 
 .top-btn-xs {
-  margin-top: 5px;
+  margin-top: 3px;
 }
 
 .top-link {
